fix mobile nav alignment

--- a/src/app/core/components/toolbar/toolbar.component.scss
+++ b/src/app/core/components/toolbar/toolbar.component.scss
@@ -22,6 +22,10 @@
 }
 
 @media(max-width: 576px) {
+	.mobile-nav__container {
+		text-align: center;
+		width: 100%;
+	}
 	.navbar-nav {
 		flex-direction: row;
 		overflow-x: auto;
